stretch: made nav bar fixed with opacity, different text styling, and hover animations for links. adjusted margin-top of .home section to adjust for new positioning

--- a/css/index.css
+++ b/css/index.css
@@ -170,9 +170,14 @@ p {
   justify-content: space-around;
   background-color: #f6f6f6;
   margin-top: 0;
+  position: fixed;
+  z-index: 100;
+  opacity: 0.7;
+  padding-top: 15px;
 }
 .navigation h1 {
   font-size: 4rem;
+  text-decoration: underline overline;
 }
 .navigation .links {
   width: 60%;
@@ -190,6 +195,18 @@ p {
   padding: 18px 2.7%;
   text-decoration: none;
   color: black;
+  text-decoration: underline overline;
+  font-size: 2rem;
+}
+@media (min-width: 501px) {
+  .navigation .links a:hover {
+    transform: scale(1.5);
+    text-decoration: none;
+    border-radius: 2px;
+    padding: 0;
+    color: #f6f6f6;
+    background-color: black;
+  }
 }
 @media (max-width:500px) {
   .navigation .links a {
@@ -206,6 +223,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 125px;
 }
 .home .intro img {
   border-radius: 5px;
