--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,10 @@
 // Home Content
 
 .home {
+  //margin-top value only needed for stretch goal with fixed nav
+  margin-top: 130px;
+
+  }
   .intro {
     img {
       border-radius: 5px;
